Fix discount percentage text wrap issue

--- a/src/assets/scss/core/elements/chat/_work-area.scss
+++ b/src/assets/scss/core/elements/chat/_work-area.scss
@@ -481,10 +481,11 @@
 				position: absolute;
 				top: 0;
 				left: 50%;
-				width: 100%;
+				// width: 100%;
 				font-size: 0.9em;
 				color: #dd3d47;
 				font-weight: 500;
+				white-space: nowrap;
 				transform: translate(-50%, -50%);
 			}
 		}
